--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -156,12 +156,26 @@ doh_k12_2013$religiousmember_exempt <- NULL
 #reassign na
 doh_k12_2013$religious_exempt[doh_k12_2013$religious_exempt >= 5555] <- NA
 
+```
+#####Handling Reported#####
+The data set did not originally have a field indicating whether a school reported.
+I'm assuming that schools that have a value, even a 0 value, for exemptions, reported, and those with na (original value of file is blank), did not report.  I noticed that for the blank cases in exempt, most have a blank for enrollment also.  
 
+```{r 2013 assinging reported}
+doh_k12_2013$reported[is.na(doh_k12_2013$exempt)] <- "No"
+
+
+
+
+```
 
 
 
 
 ####2012####
+```{r}
+colnames_2012 = c('school_code','school_name','school_type','school_district','school_county','reported','grade_levels','enrolled','exempt','medical_exempt','personal_exempt','religious_exempt','religious_member_exempt','exempt_DTTd','exempt_pertussis','exempt_polio','exempt_MMR','exempt_hepB','exempt_varicella','year')
+```
 
 
 
@@ -196,30 +210,4 @@ summary(schoolcode_2011_unique$School.County == 'KING')
 
 ```
 The 2012 data set is missing address data, but there are only 31 unique school codes in this data set, so there are only 31 missing addresses.
-
-Going to rename the 2011 columns.
-
-
-
-```{r rename columns}
-colnames_2011 = c('year','school_code','school_name','school_type','school_street','school_city','school_state','school_zip','school_county','school_district','district_code','grade_levels','reported','enrolled','exempt','percent_exempt','medical_exempt','percent_medical_exempt','personal_exempt','percent_personal_exempt','religious_exempt','percent_religious_exempt','exempt_DTTd','exempt_pertussis','exempt_polio','exempt_measles','exempt_mumps','exempt_rubella','exempt_hepB','exempt_varicella')
-
-colnames(doh_k12_2011) <- colnames_2011
-
-colnames_2012 = c('school_code','school_name','school_type','school_district','school_county','reported','grade_levels','enrolled','exempt','medical_exempt','personal_exempt','religious_exempt','religious_member_exempt','exempt_DTTd','exempt_pertussis','exempt_polio','exempt_MMR','exempt_hepB','exempt_varicella','year')
-
-colnames(doh_k12_2012) <- colnames_2012
-
-
-```
-
-
-```{r 2012 combine religious}
-#combine religious exemptions
-doh_k12_2011$religious_exempt[]
-```
-
-```{r align data to 2011 part 2}
-
-```
 
