--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Udacity EDA R Final Project"
+title: "Udacity EDA R Final Project Part 1: Data Wrangling"
 author: "Andrew Thomas Bauman"
 date: "Tuesday, February 10, 2015"
 output: html_document
@@ -51,18 +51,20 @@ library(tidyr) #bare bones data tidying library
 
 ###Read WA DOH Data Sets###
 
-Named data sets based on starting year of school year.  That is also how the year variable was assigned.  So 2011 referes to the school year (SY) 2011-2012
+Named data sets based on starting year of school year.  That is also how the year variable was assigned.  So 2011 refers to the school year (SY) 2011-2012
+
+Data was provided as 3 Excel files.  The files contained summary functions as well some formatting and images at the bottom of the files.  I didn't realize this at first and created .csv and .txt files for import.  The files imported but many columns contained incorrect data classes (integers as strings).  Removing the formatting, images, and summary functions reduced this considerably.  I have provided the orignal files as a .rar on github should someone want to audit my methods for loss.
 
 ```{r load school vaccination exemption data sets}
 
 #WA DOH SY 2011-2012 K-12
-doh_k12_2011<- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2011.csv')
+doh_k12_2011<- read.delim('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/2011.txt', quote="" , stringsAsFactors=FALSE)
 
 #WA DOH SY 2012-2013 K-12
-doh_k12_2012<- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2012.csv')
+doh_k12_2012<- read.delim('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/2012.txt', quote="" , stringsAsFactors=FALSE)
 
 #WA doh SY 2013-2014 K-12
-doh_k12_2013<- read.csv('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/WA_Vacc_K12_2013.csv')
+doh_k12_2013<- read.delim('~/Udacity/dataAnalysisR/EDA_R_Udacity/EDA_R_FinalProject/data/2013.txt', quote="" , stringsAsFactors=FALSE)
 ```
 ###Data Audit###
 Most of the audit was done through simple visual inspection of fields and the first 20 rows of data. The columns of the dataframes don't match, there is missing information, and information was recorded in different ways.  The data is not tidy.  Tidying will be saved for the final school vaccination DF.
