Processed 2012, inspected column classes (fine for now)

--- a/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
+++ b/EDA_R_FinalProject/EDA_R_FinalProject.Rmd
@@ -187,6 +187,9 @@ colnames_2012 = c('school_code','school_name','school_type','school_district','s
 
 colnames(doh_k12_2012) <- colnames_2012
 
+#drop data_source
+doh_k12_2012$data_source <- NULL
+
 
 
 ```
@@ -207,6 +210,8 @@ doh_k12_2012$religiousmember_exempt <- NULL
 doh_k12_2012$religious_exempt[doh_k12_2012$religious_exempt >= 5555] <- NA
 ```
 
+
+```
 
 **Important Question**
 
